--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
