--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,10 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<finalName>ZipCodeChallengeTester</finalName>
+							<finalName>ZipCodeChallenge</finalName>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.davidhjones.challenge.ZipCodeRangeMergeTester</mainClass>
+									<mainClass>com.davidhjones.challenge.Application</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
